2006-02-04  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome-utils/glade/preferences.glade: Fix name of
	file-compression option.

	* src/backend/file/gnc-backend-file.c (gnc_backend_new): Setup
	option initial values; register configuration-change notification.
	(retain_changed_cb, compression_changed_cb): Add.

	* src/backend/file/gnc-backend-file.h (struct FileBackend_struct):
	Move backend options into backend struct.

2006-02-03  David Hampton  <hampton@employees.org>

	* src/business/business-gnome/dialog-order.c:
	* src/business/business-gnome/dialog-vendor.c:
	* src/business/business-gnome/dialog-customer.c:
	* src/business/business-gnome/dialog-job.c:
	* src/business/business-gnome/dialog-employee.c:
	* src/business/business-gnome/dialog-invoice.c:
	* src/gnome/dialog-find-transactions.c:
	* src/gnome-search/search.glade:
	* src/gnome-search/dialog-search.[ch]: Re-title the search dialog
	based upon the menu used to invoke it. Fixes #329538.

2006-02-02  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-view.[ch]: Andreas Köhler's patch to
	allow explicit specification of which columns in a tree view
	expand.  Updated to automatically mark a column as expandable if
	it is the only visible column.

	* src/business/dialog-tax-table/dialog-tax-table.c:
	* src/gnome-utils/gnc-tree-view-account.c:
	* src/gnome-utils/dialog-account.c:
	* src/gnome/gnc-plugin-page-account-tree.c:
	* src/gnome/druid-stock-split.c:
	* src/gnome/dialog-tax-info.c:
	* src/gnome/druid-hierarchy.c: Change the default visibilities of
	the GncTreeViewAccount widget to only show the account name
	column.  This is the most commonly used case for this widget.

2006-02-02  Joshua Sled  <jsled@asynchronous.org>

	* lib/libqof/qof/qofsession.c (qof_session_load_backend): get+load
	backend configuration after creation.
	* src/backend/file/gnc-backend-file.c (gnc_file_be_get_config):
	fix configuration.
	(gnc_file_be_remove_old_files): Add ".log" suffix to the