@@ -392,121 +392,121 @@ gnc_tree_view_account_new_with_group (AccountGroup *group, gboolean show_root)
   sample_commodity = gnc_commodity_get_fullname(gnc_default_currency());
 
   priv->name_column 
-    = gnc_tree_view_add_text_column(view, N_("Account Name"), "name",
+    = gnc_tree_view_add_text_column(view, _("Account Name"), "name",
                                     GNC_STOCK_ACCOUNT, "Expenses:Entertainment",
                                     GNC_TREE_MODEL_ACCOUNT_COL_NAME,
                                     GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
                                     NULL);
-  gnc_tree_view_add_text_column(view, N_("Type"), "type", NULL, sample_type,
+  gnc_tree_view_add_text_column(view, _("Type"), "type", NULL, sample_type,
 				GNC_TREE_MODEL_ACCOUNT_COL_TYPE,
 				GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				NULL);
-  gnc_tree_view_add_text_column(view, N_("Commodity"), "commodity", NULL,
+  gnc_tree_view_add_text_column(view, _("Commodity"), "commodity", NULL,
 				sample_commodity,
 				GNC_TREE_MODEL_ACCOUNT_COL_COMMODITY,
 				GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				NULL);
   priv->code_column
-    = gnc_tree_view_add_text_column(view, N_("Account Code"), "account-code", NULL,
+    = gnc_tree_view_add_text_column(view, _("Account Code"), "account-code", NULL,
                                     "1-123-1234",
                                     GNC_TREE_MODEL_ACCOUNT_COL_CODE,
                                     GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
                                     NULL);
   priv->desc_column
-    = gnc_tree_view_add_text_column(view, N_("Description"), "description", NULL,
+    = gnc_tree_view_add_text_column(view, _("Description"), "description", NULL,
                                     "Sample account description.",
                                     GNC_TREE_MODEL_ACCOUNT_COL_DESCRIPTION,
                                     GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
                                     NULL);
-  gnc_tree_view_add_numeric_column(view, N_("Last Num"), "lastnum", "12345",
+  gnc_tree_view_add_numeric_column(view, _("Last Num"), "lastnum", "12345",
 				   GNC_TREE_MODEL_ACCOUNT_COL_LASTNUM,
 				   GNC_TREE_VIEW_COLUMN_COLOR_NONE,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   NULL);
-  gnc_tree_view_add_numeric_column(view, N_("Present"), "present",
+  gnc_tree_view_add_numeric_column(view, _("Present"), "present",
 				   SAMPLE_ACCOUNT_VALUE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_PRESENT,
 				   GNC_TREE_MODEL_ACCOUNT_COL_COLOR_PRESENT,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   sort_by_present_value);
-  gnc_tree_view_add_numeric_column(view, N_("Present (Report)"), "present_report",
+  gnc_tree_view_add_numeric_column(view, _("Present (Report)"), "present_report",
 				   SAMPLE_ACCOUNT_VALUE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_PRESENT_REPORT,
 				   GNC_TREE_MODEL_ACCOUNT_COL_COLOR_PRESENT,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   sort_by_present_value);
-  gnc_tree_view_add_numeric_column(view, N_("Balance"), "balance",
+  gnc_tree_view_add_numeric_column(view, _("Balance"), "balance",
 				   SAMPLE_ACCOUNT_VALUE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_BALANCE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_COLOR_BALANCE,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   sort_by_balance_value);
-  gnc_tree_view_add_numeric_column(view, N_("Balance (Report)"), "balance_report",
+  gnc_tree_view_add_numeric_column(view, _("Balance (Report)"), "balance_report",
 				   SAMPLE_ACCOUNT_VALUE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_BALANCE_REPORT,
 				   GNC_TREE_MODEL_ACCOUNT_COL_COLOR_BALANCE,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   sort_by_balance_value);
-  gnc_tree_view_add_numeric_column(view, N_("Cleared"), "cleared",
+  gnc_tree_view_add_numeric_column(view, _("Cleared"), "cleared",
 				   SAMPLE_ACCOUNT_VALUE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_CLEARED,
 				   GNC_TREE_MODEL_ACCOUNT_COL_COLOR_CLEARED,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   sort_by_cleared_value);
-  gnc_tree_view_add_numeric_column(view, N_("Cleared (Report)"), "cleared_report",
+  gnc_tree_view_add_numeric_column(view, _("Cleared (Report)"), "cleared_report",
 				   SAMPLE_ACCOUNT_VALUE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_CLEARED_REPORT,
 				   GNC_TREE_MODEL_ACCOUNT_COL_COLOR_CLEARED,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   sort_by_cleared_value);
-  gnc_tree_view_add_numeric_column(view, N_("Reconciled"), "reconciled",
+  gnc_tree_view_add_numeric_column(view, _("Reconciled"), "reconciled",
 				   SAMPLE_ACCOUNT_VALUE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_RECONCILED,
 				   GNC_TREE_MODEL_ACCOUNT_COL_COLOR_RECONCILED,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   sort_by_reconciled_value);
-  gnc_tree_view_add_numeric_column(view, N_("Reconciled (Report)"), "reconciled_report",
+  gnc_tree_view_add_numeric_column(view, _("Reconciled (Report)"), "reconciled_report",
 				   SAMPLE_ACCOUNT_VALUE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_RECONCILED_REPORT,
 				   GNC_TREE_MODEL_ACCOUNT_COL_COLOR_RECONCILED,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   sort_by_reconciled_value);
-  gnc_tree_view_add_numeric_column(view, N_("Future Minimum"), "future_min",
+  gnc_tree_view_add_numeric_column(view, _("Future Minimum"), "future_min",
 				   SAMPLE_ACCOUNT_VALUE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_FUTURE_MIN,
 				   GNC_TREE_MODEL_ACCOUNT_COL_COLOR_FUTURE_MIN,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   sort_by_future_min_value);
-  gnc_tree_view_add_numeric_column(view, N_("Future Minimum (Report)"), "future_min_report",
+  gnc_tree_view_add_numeric_column(view, _("Future Minimum (Report)"), "future_min_report",
 				   SAMPLE_ACCOUNT_VALUE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_FUTURE_MIN_REPORT,
 				   GNC_TREE_MODEL_ACCOUNT_COL_COLOR_FUTURE_MIN,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   sort_by_future_min_value);
-  gnc_tree_view_add_numeric_column(view, N_("Total"), "total",
+  gnc_tree_view_add_numeric_column(view, _("Total"), "total",
 				   SAMPLE_ACCOUNT_VALUE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_TOTAL,
 				   GNC_TREE_MODEL_ACCOUNT_COL_COLOR_TOTAL,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   sort_by_total_value);
-  gnc_tree_view_add_numeric_column(view, N_("Total (Report)"), "total_report",
+  gnc_tree_view_add_numeric_column(view, _("Total (Report)"), "total_report",
 				   SAMPLE_ACCOUNT_VALUE,
 				   GNC_TREE_MODEL_ACCOUNT_COL_TOTAL_REPORT,
 				   GNC_TREE_MODEL_ACCOUNT_COL_COLOR_TOTAL,
 				   GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				   sort_by_total_value);
   priv->notes_column
-    = gnc_tree_view_add_text_column(view, N_("Notes"), "notes", NULL,
+    = gnc_tree_view_add_text_column(view, _("Notes"), "notes", NULL,
                                     "Sample account notes.",
                                     GNC_TREE_MODEL_ACCOUNT_COL_NOTES,
                                     GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
                                     NULL);
-  gnc_tree_view_add_text_column(view, N_("Tax Info"), "tax-info", NULL,
+  gnc_tree_view_add_text_column(view, _("Tax Info"), "tax-info", NULL,
 				"Sample tax info.",
 				GNC_TREE_MODEL_ACCOUNT_COL_TAX_INFO,
 				GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				NULL);
-  gnc_tree_view_add_toggle_column(view, N_("Placeholder"), "P", "placeholder",
+  gnc_tree_view_add_toggle_column(view, _("Placeholder"), _("P"), "placeholder",
 				  GNC_TREE_MODEL_ACCOUNT_COL_PLACEHOLDER,
 				  GNC_TREE_VIEW_COLUMN_VISIBLE_ALWAYS,
 				  sort_by_placeholder,
